# single-bet-placement

./: .gitignore  MY_COMMENTS.md  README.md  conftest.py  pyproject.toml  pytest.ini
.claude/commands/: create-webui-test.md
.claude/skills/create-webui-test/: SKILL.md
endpoints/: base_endpoint.py  bet_endpoint.py
endpoints/models/: balance_models.py  bet_models.py  error_models.py  matches_models.py
helper/: browser_manager.py  configuration_manager.py
pages/: base_page.py  bet_slip.py  main_page.py  receipt_modal.py
part_a/: BUGREPORTS.md  BUGREPORT_PROMPT.md  TESTPLAN.md
resources/: config.properties
skills/: CREATE_WEBUI_TEST_GUIDE.md
tests/api/: test_bet_placement_api.py
tests/webui/: test_bet_placement.py  test_double_submit.py  test_success_receipt.py
