[project]
name = "sporty-tests"
version = "0.1.0"
dependencies = [
    "jproperties>=2.1.2",
    "pydantic>=2.13.4",
    "pytest",
    "requests",
    "ruff",
    "selenium>=4.45.0",
]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = 3.13
explicit_package_bases=true
strict=true
